apps/photoprism/photoprism/04_statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:20201219
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /photoprism/originals
          name: originals
        #- mountPath: /asssets/cache
        #  name: photoprism
        #  subPath: cache
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      nodeSelector:
        kubernetes.io/arch: "amd64"
      volumes:
      - name: originals
        nfs:
          path: /srv/storage/kubernetes/nextcloud/data/__groupfolders/1
          readOnly: true
          server: 192.168.2.40
