apps/photoprism/photoprism/03_service.yaml
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: photoprism
#  namespace: photoprism
#spec:
#  type: ClusterIP
#  ports:
#  - name: http
#    port: 80
#    protocol: TCP
#    targetPort: http
#  selector:
#    app: photoprism
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: default
  name: photoprism
  namespace: photoprism
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.2.96
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
  sessionAffinity: None
  type: LoadBalancer
