apps/photoprism/photoprism/05_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # For nginx ingress controller:
    kubernetes.io/ingress.class: nginx
    # Default is very low so most photo uploads will fail
    nginx.ingress.kubernetes.io/proxy-body-size: "512M"
    # If using cert-manager:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  name: photoprism
  namespace: photoprism
spec:
  rules:
  - host: photoprism.my.domain
    http:
      paths:
      - backend:
          serviceName: photoprism
          servicePort: http
        path: /
  tls:
  - hosts:
    - photoprism.my.domain
    secretName: photoprism-cert
